--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+  
+    <head>
+      <title>Lily's favorites</title>
+  </head>
+  
+  <body>
+    <h1></h1>
+    <p></p>
+  </body>
+  
+  
+  
+  
+</html>
